# rackspace-email-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: alias_ops.rs  debugging.rs  lib.rs
