[package]
name = "rackspace-email"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
base64 = "0.21"
chrono = "0.4"
thiserror = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
serde_urlencoded = "0.7"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["test-util"] }

[[bin]]
name = "debugging"
path = "src/debugging.rs"

[[bin]]
name = "alias-ops"
path = "src/alias_ops.rs"
